# ami-music-sdk-kotlin

./: .gitignore  LICENSE.header.template  NOTICE  README.md  build.gradle.kts  dagger.json  gradle.properties  settings.gradle.kts
convention-plugins/src/main/kotlin/: convention.publication.gradle.kts
dagger/: notes.md  pyproject.toml
dagger/src/main/: __init__.py  build.py  git_utils.py  something.py  something_git.py
dagger/test/: test_sample.py  test_something_git.py
gradle/: libs.versions.toml
openapi/: ami-music-spec.yaml
src/commonMain/kotlin/com/sparetimedevs/ami/core/: AsEitherWithAccumulatedValidationErrors.kt  DomainError.kt  IdOrIndex.kt  NotYetImplemented.kt
src/commonMain/kotlin/com/sparetimedevs/ami/core/util/: Uuid.kt
src/commonMain/kotlin/com/sparetimedevs/ami/core/validation/: CombineAllValidationErrors.kt  ValidationError.kt  ValidationException.kt
src/commonMain/kotlin/com/sparetimedevs/ami/music/example/: ExampleScore0.kt  ExampleScore1.kt  FrereJacques.kt  HeighHoNobodyHome.kt  MeasureHelper.kt  NoteHelper.kt  README.md
src/commonMain/kotlin/com/sparetimedevs/ami/music/input/: ConvertToInput.kt  Types.kt
src/commonMain/kotlin/com/sparetimedevs/ami/music/serialization/: Json.kt  ToSerializable.kt
src/commonTest/kotlin/com/sparetimedevs/ami/music/example/: ScoreInput.kt  ScoreInvalidInput.kt
src/commonTest/kotlin/com/sparetimedevs/ami/music/serialization/: JsonTest.kt
src/jsMain/kotlin/com/sparetimedevs/ami/core/util/: Uuid.js.kt
src/jvmTest/kotlin/backwardscompat/: HttpClient.kt  PingpongTest.kt
(+28 files in other folders)
