[project]
name = "main"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = ["dagger-io"]

[tool.uv.sources]
dagger-io = { path = "sdk", editable = true }

[build-system]
requires = ["hatchling==1.25.0"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = [
    "-ra -q",
    "--import-mode=importlib",
]
testpaths = [
    "test",
]
pythonpath = [
    "src"
]
asyncio_default_fixture_loop_scope = "function" # Needed to get rid of: PytestDeprecationWarning: The configuration option "asyncio_default_fixture_loop_scope" is unset.
